[package]
name = "scroller"
version = "0.1.0"
authors = ["Jeroen ter Voorde <jeroentv@windowslive.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
lyon = "0.16"
geo = { version = "0.14" }

[dependencies.sdl2]
version = "0.34.3"
features = ["gfx"]
